deploy-k8s.yml
# deploy diss-backend by deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diss-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: diss-backend
  template:
    metadata:
      labels:
        app: diss-backend
    spec:
      containers:
      - env:
        - name: ALLOW_EMPTY_PASSWORD
          value: "yes"
        - name: MARIADB_HOST
          value: diss-backend-mariadb
        - name: MARIADB_PORT_NUMBER
          value: "3306"
        - name: MARIADB_ROOT_PASSWORD
          valueFrom:
            secretKeyRef:
              key: pwd
              name: diss-backend-secret
        - name: MARIADB_USER
          value: diss-backend
        - name: MARIADB_PASSWORD
          valueFrom:
            secretKeyRef:
              key: pwd
              name: diss-backend-secret
        - name: MARIADB_DATABASE
          value: diss-backend
        name: diss-backend
        image: xiliangma/diss-backend:statefulset-test
        imagePullPolicy: Always
        ports:
          - name: dev
            containerPort: 8080
          - name: prod
            containerPort: 8088
          - name: https
            containerPort: 443
        resources:
          limits:
            cpu: 1000m
            memory: 1024Mi
          requests:
            cpu: 300m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /swagger
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 3
          failureThreshold: 3
        volumeMounts:
          - mountPath: /data/diss-backend
            name: diss-backend-data
      volumes:
        - name: diss-backend-data
          emptyDir: {}

# diss-backend-mariadb by StatefulSet
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: diss-backend-mariadb
spec:
  replicas: 1
  selector: # 必要参数
    matchLabels:
      app: diss-backend-mariadb
  serviceName: diss-backend-mariadb #必要参数
  template:
    metadata:
      labels:
        app: diss-backend-mariadb # 此处对应 service的labels
    spec:
      containers:
        - env:
          - name: MARIADB_ROOT_PASSWORD
            valueFrom:
              secretKeyRef:
                key: pwd
                name: diss-backend-secret
          - name: MARIADB_USER
            value: diss-backend
          - name: MARIADB_PASSWORD
            valueFrom:
              secretKeyRef:
                key: pwd
                name: diss-backend-secret
          - name: MARIADB_DATABASE
            value: diss-backend
          name: mariadb
          image: docker.io/bitnami/mariadb:10.1.35-debian-9
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
              name: mysql
              protocol: TCP
          resources:
            limits:
              cpu: 1000m
              memory: 1024Mi
            requests:
              cpu: 300m
              memory: 256Mi
          volumeMounts:
            - name: diss-backend-data
              mountPath: /data/rstapi/mysql
      volumes:
        - name: diss-backend-data
          emptyDir: {}

# diss-backend service
---
apiVersion: v1
kind: Service
metadata:
  name: diss-backend
  labels:
    app: diss-backend
spec:
  selector:
    app: diss-backend
  ports:
  - name: dev
    port: 8080
    targetPort: dev
  - name: prod
    port: 8088
    targetPort: prod
  - name: https
    port: 443
    targetPort: https

# diss-backend-mariadb service
---
apiVersion: v1
kind: Service
metadata:
  name: diss-backend-mariadb
  labels:
    app: diss-backend-mariadb
spec:
  selector:
    app: diss-backend-mariadb
  ports:
  - name: dev
    port: 3306
    targetPort: mysql

# diss-backend-mariadb secret
